Added basic eventlistener

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <select name="country" id="country">
-      <option value="">Choose a city</option>
-      <option value="paris">Paris</option>
-      <option value="sydney">Sydney</option>
-      <option value="tokyo">Tokyo</option>
-    </select>
+    <div>
+      <select name="country" id="country">
+        <option value="">Choose a city</option>
+        <option value="paris">Paris</option>
+        <option value="sydney">Sydney</option>
+        <option value="tokyo">Tokyo</option>
+      </select>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
