Updated the js event

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div>
       <select name="country" id="country">
         <option value="">Choose a city</option>
-        <option value="paris">Paris</option>
-        <option value="sydney">Sydney</option>
-        <option value="tokyo">Tokyo</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="Australia/Sydney">Sydney</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
     </div>
     <script src="src/index.js"></script>
