--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
   </head>
   <body>
     <div>
-      <select name="country" id="country">
-        <option value="">Choose a city</option>
-        <option value="Europe/Paris">Paris</option>
-        <option value="Australia/Sydney">Sydney</option>
-        <option value="Asia/Tokyo">Tokyo</option>
-      </select>
+      <div>
+        <select name="country" id="country">
+          <option value="">Choose a city</option>
+          <option value="Europe/Paris">Paris</option>
+          <option value="Australia/Sydney">Sydney</option>
+          <option value="Asia/Tokyo">Tokyo</option>
+        </select>
+      </div>
+      <footer>
+        <a href="https://github.com/DaisySSLMLK/Weather-app.git"
+          >Open-source code</a
+        >
+        by Désirée Willems
+      </footer>
     </div>
     <script src="src/index.js"></script>
   </body>
