--- a/index.html
+++ b/index.html
@@ -10,14 +10,56 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
-    <div>
-      <div>
+    <div class="body">
+      <h1>World clock</h1>
+      <div class="container">
         <select name="country" id="country">
           <option value="">Choose a city</option>
-          <option value="Europe/Paris">Paris</option>
+          <option value="Pacific/Auckland">Auckland</option>
+          <option value="Europe/Berlin">Berlin</option>
+          <option value="Africa/Djibouti">Djibouti</option>
+          <option value="Africa/Freetown">Freetown</option>
+          <option value="Europe/Helsinki">Helsinki</option>
+          <option value="Pacific/Honolulu">Honolulu</option>
+          <option value="Asia/Jakarta">Jakarta</option>
+          <option value="Asia/Jerusalem">Jerusalem</option>
+          <option value="Africa/Johannesburg">Johannesburg</option>
+          <option value="Asia/Kabul">Kabul</option>
+          <option value="Europe/Lisbon">Lisbon</option>
+          <option value="Europe/London">London</option>
+          <option value="America/Los_Angeles">Los Angeles</option>
+          <option value="Asia/Manila">Manila</option>
+          <option value="Europe/Moscow">Moscow</option>
+          <option value="America/New_York">New York</option>
+          <option value="Antarctica/Palmer">Palmer</option>
+          <option value="America/Paramaribo">Paramaribo</option>
+          <option value="Australia/Perth">Perth</option>
+          <option value="Asia/Qatar">Qatar</option>
+          <option value="America/Resolute">Resolute</option>
+          <option value="Atlantic/Reykjavik">Reykjavik</option>
+          <option value="America/Sao_Paulo">Sao Paulo</option>
+          <option value="America/Santiago">Santiago</option>
+          <option value="Asia/Seoul">Seoul</option>
+          <option value="Asia/Singapore">Singapore</option>
           <option value="Australia/Sydney">Sydney</option>
           <option value="Asia/Tokyo">Tokyo</option>
+          <option value="Europe/Volgograd">Volgograd</option>
         </select>
+        <div class="city">
+          <h2>Los Angeles</h2>
+          <div class="date">9 Augustus 2023</div>
+          <div class="time">22:13</div>
+        </div>
+        <div class="city">
+          <h2>London</h2>
+          <div class="date">9 Augustus 2023</div>
+          <div class="time">22:13</div>
+        </div>
+        <div class="city">
+          <h2>Auckland</h2>
+          <div class="date">9 Augustus 2023</div>
+          <div class="time">22:13</div>
+        </div>
       </div>
       <footer>
         <a href="https://github.com/DaisySSLMLK/Worldclock-app.git"
