Added JS current time for prechosen locations

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
           <option value="Asia/Tokyo">Tokyo</option>
           <option value="Europe/Volgograd">Volgograd</option>
         </select>
-        <div class="city">
+        <div class="city" id="los-angeles">
           <h2>Los Angeles</h2>
           <div class="date">9 Augustus 2023</div>
-          <div class="time">22:13</div>
+          <div class="time">22:13:10</div>
         </div>
-        <div class="city">
+        <div class="city" id="london">
           <h2>London</h2>
           <div class="date">9 Augustus 2023</div>
-          <div class="time">22:13</div>
+          <div class="time">22:13:10</div>
         </div>
-        <div class="city">
+        <div class="city" id="auckland">
           <h2>Auckland</h2>
           <div class="date">9 Augustus 2023</div>
           <div class="time">22:13</div>
