--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Worldclock</title>
+    <title>World clock</title>
 
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
@@ -21,10 +21,12 @@
     <div class="body">
       <h1>World clock</h1>
       <div class="container">
-        <select name="country" id="country">
+        <select name="city" id="city">
           <option value="">Choose a city</option>
+          <option value="current">My current location</option>
           <option value="Pacific/Auckland">Auckland</option>
           <option value="Europe/Berlin">Berlin</option>
+          <option value="Europe/Brussels">Brussels</option>
           <option value="Africa/Djibouti">Djibouti</option>
           <option value="Africa/Freetown">Freetown</option>
           <option value="Europe/Helsinki">Helsinki</option>
@@ -53,20 +55,22 @@
           <option value="Asia/Tokyo">Tokyo</option>
           <option value="Europe/Volgograd">Volgograd</option>
         </select>
-        <div class="city" id="los-angeles">
-          <h2>Los Angeles</h2>
-          <div class="date">9 Augustus 2023</div>
-          <div class="time">22:13:10</div>
-        </div>
-        <div class="city" id="london">
-          <h2>London</h2>
-          <div class="date">9 Augustus 2023</div>
-          <div class="time">22:13:10</div>
-        </div>
-        <div class="city" id="auckland">
-          <h2>Auckland</h2>
-          <div class="date">9 Augustus 2023</div>
-          <div class="time">22:13</div>
+        <div class="cities" id="cities">
+          <div class="city" id="los-angeles">
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+            <div class="time"></div>
+          </div>
+          <div class="city" id="london">
+            <h2>London</h2>
+            <div class="date"></div>
+            <div class="time"></div>
+          </div>
+          <div class="city" id="auckland">
+            <h2>Auckland</h2>
+            <div class="date"></div>
+            <div class="time"></div>
+          </div>
         </div>
       </div>
       <footer>
