Updated the html, css and js to current location set up

--- a/index.html
+++ b/index.html
@@ -56,20 +56,10 @@
           <option value="Europe/Volgograd">Volgograd</option>
         </select>
         <div class="cities" id="cities">
-          <div class="city" id="los-angeles">
-            <h2>Los Angeles</h2>
-            <div class="date"></div>
-            <div class="time"></div>
-          </div>
-          <div class="city" id="london">
-            <h2>London</h2>
-            <div class="date"></div>
-            <div class="time"></div>
-          </div>
-          <div class="city" id="auckland">
-            <h2>Auckland</h2>
-            <div class="date"></div>
-            <div class="time"></div>
+          <div id="current">
+            <h2 class="city"></h2>
+            <div class="cdate"></div>
+            <div class="ctime"></div>
           </div>
         </div>
       </div>
